fixed overflow issue on smaller screen sizes

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@
 
 .designBoxBottom {
   width: 100%;
-  height: 350px;
+  height: 300px;
   position: fixed;
   display: flex;
   align-items: center;
